@@ -229,6 +229,9 @@ Documentation
 Tools/Demos
 -----------
 
+- Issue #18457: Fixed saving of formulas and complex numbers in
+  Tools/demo/ss1.py.
+
 - Issue #18449: Make Tools/demo/ss1.py work again on Python 3.  Patch by
   Févry Thibault.
 
